[gd_scene load_steps=2 format=3 uid="uid://bp6ak451eog5l"]

[ext_resource type="Script" uid="uid://2oac5sn467u7" path="res://addons/weekendDialogue/Scripts/DialogueSetVariableNode.gd" id="1_vm7vk"]

[node name="Set Variable Node" type="GraphNode"]
offset_left = 62.0
offset_top = 205.0
offset_right = 308.0
offset_bottom = 404.0
mouse_filter = 1
position_offset = Vector2(62, 205)
title = "Set Variable"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_vm7vk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Key Edit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Key"
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="Variable Type Option" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Boolean"
popup/item_0/id = 0
popup/item_1/text = "String"
popup/item_1/id = 1
popup/item_2/text = "Integer"
popup/item_2/id = 2
popup/item_3/text = "Float"
popup/item_3/id = 3

[node name="Value Edit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Value"
scroll_fit_content_height = true
scroll_fit_content_width = true

[node name="Boolean Checkbox" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " Value"

[connection signal="text_changed" from="VBoxContainer/Key Edit" to="." method="_on_key_edit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/Variable Type Option" to="." method="_on_variable_type_option_item_selected"]
[connection signal="text_changed" from="VBoxContainer/Value Edit" to="." method="_on_value_edit_text_changed"]
[connection signal="toggled" from="VBoxContainer/Boolean Checkbox" to="." method="_on_boolean_checkbox_toggled"]
